--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
         </button>
       </div>
       <!-- loading -->
-      <div class="text-center pb-3">
-        <div id="loading" class="spinner-border" role="status">
+        <div id="loading" class="spinner-border pb-3" role="status">
           <span class="visually-hidden">Loading...</span>
         </div>
-      </div>
+      
       <!-- error -->
       <p id="error1">Your input is not valid</p>
       <p id="error2">No search result not fond</p>
